--- a/style.css
+++ b/style.css
@@ -6,3 +6,26 @@ html, body {
 section {
     margin-top: 10px;
 }
+
+.task-one p::before{
+    content: "one unpe a time";
+}
+
+.task-one p::after{
+    content: "The End";
+}
+
+.task-two{
+    background-image: url(assets/beach.jpg);
+    width: 400px; height:300px;
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
+    clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+}
+
+
+.task-three {
+transform: rotate(180deg);
+background-position: left;
+}
